2006-01-26  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (MINIMAL_DEPENDS): Add fontconfig and pangoxft.

2006-01-25  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (main): Move console quieting logic to ...
	(console_quiet): ... here. Redirect output to syslog when being quiet.

2006-01-25  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (main): Rename daemonize variable to daemon.
	Move daemonization logic to ...
	(daemonize): ... here. New function. Change dir to root.

2006-01-25  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (main): Move pid file creation to ...
	(create_pidfile): ... here. New function.

2006-01-25  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (main): Move signal setup and restore to ...
	(sigs_init, sigs_restore): ... here. New functions.

2006-01-23  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (invoked_get_magic): Mask and check the magic
	and the version independently.

2006-01-16  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/invokelib.h (INVOKER_MSG_MASK): New macro.
	(INVOKER_MSG_MAGIC_VERSION_MASK): Likewise.
	(INVOKER_MSG_MAGIC_OPTION_MASK): Likewise.
	(INVOKER_MSG_MAGIC_OPTION_WAIT): Likewise.
	(INVOKER_MAGIC): Renamed to ...
	(INVOKER_MSG_MAGIC): ... this. Fix all callers. Move version to ...
	(INVOKER_MSG_MAGIC_VERSION): ... here. New macro.
	(INVOKER_EXEC): Renamed to ...
	(INVOKER_MSG_EXEC): ... this. Fix all callers.
	(INVOKER_ARGS): Renamed to ...
	(INVOKER_MSG_ARGS): ... this. Fix all callers.
	(INVOKER_END): Renamed to ...
	(INVOKER_MSG_END): ... this. Fix all callers.
	(INVOKER_ACK): Renamed to ...
	(INVOKER_MSG_ACK): ... this. Fix all callers.

2006-01-16  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/invokelib.c: Add svn:keywords Id.
	* launcher/invokelib.h: Likewise.
	* launcher/invoker.1.in: Likewise.
	* launcher/invoker.c: Likewise.
	* launcher/launcher.1.in: Likewise.