@@ -1,3 +1,8 @@
+2006-01-27  Guillem Jover  <guillem.jover@nokia.com>
+
+	* launcher/invoker.c (get_linux_lowmem_modifier, get_delay, main): A
+	delay is an unsigned int, fix accordingly.
+
 2006-01-26  Guillem Jover  <guillem.jover@nokia.com>
 
 	* configure.ac (MINIMAL_DEPENDS): Add fontconfig and pangoxft.
